Explored the 'Gross' Feature
Explored the gross of Sci-Fi, Comedy and Thriller movie genres.

--- a/ Exploratory Analysis on the IMDB Dataset.ipynb
+++ b/ Exploratory Analysis on the IMDB Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "(5043, 28)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "Name: imdb_score, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,17 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000028D34C55908>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001CF15AE13C8>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "Name: gross, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,22 +241,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a min value of 162 and a max value of 760,505,800 with the average movie grossing 4,846,841."
+    "We have a min value of 162 and a max value of 760,505,800 with the average movie grossing 48,468,410."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001D434559C50>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001CF16409BE0>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "Name: genres, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['History', 'Drama', 'Biography', 'Animation', 'Musical', 'News', 'Short', 'War', 'Western', 'Sport', 'Film-Noir', 'Sci-Fi', 'Music', 'Action', 'Crime', 'Fantasy', 'Comedy', 'Family', 'Mystery', 'Thriller', 'Documentary', 'Romance', 'Horror', 'Adventure']\n"
+      "['Sci-Fi', 'Fantasy', 'Western', 'Mystery', 'War', 'Film-Noir', 'Crime', 'Musical', 'History', 'Drama', 'Comedy', 'Action', 'News', 'Animation', 'Thriller', 'Music', 'Biography', 'Romance', 'Family', 'Documentary', 'Horror', 'Short', 'Adventure', 'Sport']\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "Text(0.5, 1.0, 'Thriller IMDB Scores')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -457,11 +457,132 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Even though the comedy and thriller genres have more movies than the sci-fi. Each genre has very close average scores. Lets see what percentage of each genre has scores above or equal to 8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sci-Fi: 7.07 %\n",
+      "Comedy: 1.97 %\n",
+      "Thriller: 4.1 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  after removing the cwd from sys.path.\n",
+      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \"\"\"\n",
+      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter for movies >= 8\n",
+    "highly_rated = movies[\"imdb_score\"] >= 8\n",
+    "\n",
+    "print(\"Sci-Fi:\", round(len(movies[highly_rated][scifi_filter]) / len(movies[scifi_filter])*100, 2), \"%\")\n",
+    "print(\"Comedy:\", round(len(movies[highly_rated][comedy_filter]) / len(movies[comedy_filter])*100, 2), \"%\")\n",
+    "print(\"Thriller:\", round(len(movies[highly_rated][thriller_filter]) / len(movies[thriller_filter])*100, 2), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coming in at 7%, Sci-Fi has the highest precentage of movies that are rated 8 or better. Thriller is second with 4% and comdey is last with only 2% of film scoring an 8 or better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets see which movie genre performs best at the box office. First we will look at the average gross of a movie from each genre then we will see what pecentage of each genres grosses over 100,000,000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average gross of a Sci-Fi movies: $82,244,105.74\n",
+      "Average gross of a Comedy movies: $47,683,480.20\n",
+      "Average gross of a Thriller movies: $46,890,571.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Average gross of a Sci-Fi movies: ${:,.2f}'.format(movies[scifi_filter]['gross'].mean()))\n",
+    "print('Average gross of a Comedy movies: ${:,.2f}'.format(movies[comedy_filter]['gross'].mean()))\n",
+    "print('Average gross of a Thriller movies: ${:,.2f}'.format(movies[thriller_filter]['gross'].mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that Comedy and Thriller genres come very close to the average gross for all movies of 48,468,410. Sci-Fi on the  other had is above, averaging about 82 million per movie. Why is this? Lets look at what pecentage of movies grosses over 100 million for each genre."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sci-Fi: 26.92 %\n",
+      "Comedy: 15.39 %\n",
+      "Thriller: 12.72 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  after removing the cwd from sys.path.\n",
+      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \"\"\"\n",
+      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter for movies >= 8\n",
+    "high_gross = movies[\"gross\"] >= 100000000\n",
+    "\n",
+    "print(\"Sci-Fi:\", round(len(movies[high_gross][scifi_filter]) / len(movies[scifi_filter])*100, 2), \"%\")\n",
+    "print(\"Comedy:\", round(len(movies[high_gross][comedy_filter]) / len(movies[comedy_filter])*100, 2), \"%\")\n",
+    "print(\"Thriller:\", round(len(movies[high_gross][thriller_filter]) / len(movies[thriller_filter])*100, 2), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Over 25% of all Sci-Fi movies gross over 100 million. Where only 15% and 12% of Comedy and Thriller movies do."
+   ]
   }
  ],
  "metadata": {
