--- a/ Exploratory Analysis on the IMDB Dataset.ipynb
+++ b/ Exploratory Analysis on the IMDB Dataset.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Analysis on the IMDB Dataset\n",
+    "\n",
+    "The point of this notebook is to explore the IMDB Dataset to see what interesting questions we can anwser. We will start by importing our dependencies and digesting our data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +84,7 @@
    "source": [
     "There are a lot of interesting features here, but to get started I want to take a closer look at the 'imdb_score' and 'gross' features.\n",
     "\n",
-    "Startin with 'imdb_score' well check if there are any null values, drop the null values, veiw the descriptive statistic and plot the distribution on a histogram."
+    "Starting with 'imdb_score' we will check if there are any null values, drop the null values, veiw the descriptive statistics and plot the distribution on a histogram."
    ]
   },
   {
@@ -234,6 +243,7 @@
     }
    ],
    "source": [
+    "# Descriptive Statistics\n",
     "movies['gross'].describe()"
    ]
   },
@@ -282,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see very few movies gross above $100,000. I wanna see if there are any movie genres that preform better at the box office and/or have better IMBD scores than others. We'll start by looking at the movie genres and selcting a few we want to analyze."
+    "We can see very few movies gross above 100 million. I would like see if there are any movie genres that preform better at the box office and/or have better IMBD scores than others. We'll start by looking at the movie genres and selcting a few we want to analyze."
    ]
   },
   {
@@ -413,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They look similar but it kind of hard to tell when they are side by side so lets plot them all on one graph and take a look at the mean of them."
+    "They look similar but it is hard to tell when they are side by side. Lets plot them all on one graph and take a look at the average score."
    ]
   },
   {
@@ -460,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though the comedy and thriller genres have more movies than the sci-fi. Each genre has very close average scores. Lets see what percentage of each genre has scores above or equal to 8."
+    "Even though the Comedy and Thriller genres have more movies than the sci-fi. Each genre has very close average scores. Lets see what percentage of each genre has scores above or equal to 8."
    ]
   },
   {
@@ -503,28 +513,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Coming in at 7%, Sci-Fi has the highest precentage of movies that are rated 8 or better. Thriller is second with 4% and comdey is last with only 2% of film scoring an 8 or better."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Coming in at 7%, Sci-Fi has the highest precentage of movies that are rated 8 or better. Thriller is second with 4% and Comedy is last with only 2% of film scoring an 8 or better.\n",
+    "\n",
     "Lets see which movie genre performs best at the box office. First we will look at the average gross of a movie from each genre then we will see what pecentage of each genres grosses over 100,000,000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average gross of a Sci-Fi movies: $82,244,105.74\n",
-      "Average gross of a Comedy movies: $47,683,480.20\n",
-      "Average gross of a Thriller movies: $46,890,571.63\n"
+     "ename": "NameError",
+     "evalue": "name 'movies' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b36ba7094308>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Average gross of a Sci-Fi movies: ${:,.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mscifi_filter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gross'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Average gross of a Comedy movies: ${:,.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcomedy_filter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gross'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Average gross of a Thriller movies: ${:,.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mthriller_filter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gross'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movies' is not defined"
      ]
     }
    ],
@@ -538,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that Comedy and Thriller genres come very close to the average gross for all movies of 48,468,410. Sci-Fi on the  other had is above, averaging about 82 million per movie. Why is this? Lets look at what pecentage of movies grosses over 100 million for each genre."
+    "We can see that Comedy and Thriller genres come very close to the average gross for all movies of 48 million. Sci-Fi on the  other had is above, averaging about 82 million per movie. Why is this? Lets look at what pecentage of movies grosses over 100 million for each genre."
    ]
   },
   {
@@ -582,6 +589,26 @@
    "metadata": {},
    "source": [
     "Over 25% of all Sci-Fi movies gross over 100 million. Where only 15% and 12% of Comedy and Thriller movies do."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results\n",
+    "\n",
+    "Using Pandas, Numpy and Matplotlib we explored this dataset and anwsered a few interesting questions. We selected 3 movie genres and anwsered the following questions.\n",
+    "\n",
+    "1. What is the average IMDB score of the selected movie genres?\n",
+    "2. What perecentage of the movies from each of the selected genres have an IMDB score of 8 or better?\n",
+    "3. What is the average gross of a movie from each of the selected movie genres?\n",
+    "4. What perecentage of the movies from each of the selected genres gross 100 million dollar or more?\n",
+    "\n",
+    "We also used matplotlib to visualize the following.\n",
+    "\n",
+    "1. Histogram of the 'imbd_score' and 'gross' features.\n",
+    "2. Histogram of the 'imdb_score' for each of the selected movie genres.\n",
+    "3. Overlayed each of the graphs from each genre to obtain a better comparsion."
    ]
   }
  ],
