--- a/ Exploratory Analysis on the IMDB Dataset.ipynb
+++ b/ Exploratory Analysis on the IMDB Dataset.ipynb
@@ -6,24 +6,28 @@
    "source": [
     "# Exploratory Analysis on the IMDB Dataset\n",
     "\n",
-    "The point of this notebook is to explore the IMDB Dataset to see what interesting questions we can anwser. We will start by importing our dependencies and digesting our data."
+    "The point of this notebook is to explore the IMDB Dataset and see what interesting questions we can anwser. We will start by importing our dependencies and injesting our data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "\n",
+    "import warnings\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +36,7 @@
        "(5043, 28)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,12 +51,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a dataset with over 5000 movies each with 28 features. Lets take a closer look at the features."
+    "We have a dataset with over 5000 movies each with 28 features. Lets take a look at the features."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +73,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +102,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,8 +113,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No null values. Lets look at the descriptive statistics."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,13 +138,12 @@
        "Name: imdb_score, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# View the descriptive statistics\n",
     "movies['imdb_score'].describe()"
    ]
   },
@@ -146,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001CF15AE13C8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x00000188F078E5F8>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +208,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,18 +219,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Drop the missing values.\n",
-    "movies.dropna(inplace=True, subset=['gross'])"
+    "It appears that we do have some missing values within this feature. Lets drop the rows with null values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop the missing values.\n",
+    "movies.dropna(inplace=True, subset=['gross'])\n",
+    "\n",
+    "# Check that the missing values have been dropped.\n",
+    "movies['gross'].isnull().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +268,7 @@
        "Name: gross, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,22 +282,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a min value of 162 and a max value of 760,505,800 with the average movie grossing 48,468,410."
+    "We have a min value of 162 dollars and a max value of about 760 million. The average movie grosses about  48 million."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001CF16409BE0>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x00000188F33D6BE0>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -297,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +342,7 @@
        "Name: genres, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Sci-Fi', 'Fantasy', 'Western', 'Mystery', 'War', 'Film-Noir', 'Crime', 'Musical', 'History', 'Drama', 'Comedy', 'Action', 'News', 'Animation', 'Thriller', 'Music', 'Biography', 'Romance', 'Family', 'Documentary', 'Horror', 'Short', 'Adventure', 'Sport']\n"
+      "['Sport', 'Action', 'Adventure', 'Horror', 'Comedy', 'Animation', 'Western', 'War', 'Drama', 'Family', 'Thriller', 'News', 'Documentary', 'Musical', 'History', 'Film-Noir', 'Mystery', 'Music', 'Short', 'Fantasy', 'Romance', 'Crime', 'Sci-Fi', 'Biography']\n"
      ]
     }
    ],
@@ -354,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +412,7 @@
        "Text(0.5, 1.0, 'Thriller IMDB Scores')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -423,12 +454,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They look similar but it is hard to tell when they are side by side. Lets plot them all on one graph and take a look at the average score."
+    "They look similar but it is hard to tell when they are side by side. Lets plot them all on one graph and take a look at the average scores of each genre."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,12 +501,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though the Comedy and Thriller genres have more movies than the sci-fi. Each genre has very close average scores. Lets see what percentage of each genre has scores above or equal to 8."
+    "Even though the Comedy and Thriller genres have more movies than the Sci-Fi. Each genre has very close average scores. Lets see what percentage of each genre has scores above or equal to 8."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -485,18 +516,6 @@
       "Sci-Fi: 7.07 %\n",
       "Comedy: 1.97 %\n",
       "Thriller: 4.1 %\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  after removing the cwd from sys.path.\n",
-      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \"\"\"\n",
-      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \n"
      ]
     }
    ],
@@ -515,23 +534,21 @@
    "source": [
     "Coming in at 7%, Sci-Fi has the highest precentage of movies that are rated 8 or better. Thriller is second with 4% and Comedy is last with only 2% of film scoring an 8 or better.\n",
     "\n",
-    "Lets see which movie genre performs best at the box office. First we will look at the average gross of a movie from each genre then we will see what pecentage of each genres grosses over 100,000,000"
+    "Lets see which movie genre performs best at the box office. First we will look at the average gross of a movie from each genre then we will see what pecentage of each genres grosses over 100 million."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'movies' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-b36ba7094308>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Average gross of a Sci-Fi movies: ${:,.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mscifi_filter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gross'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Average gross of a Comedy movies: ${:,.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcomedy_filter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gross'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Average gross of a Thriller movies: ${:,.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mthriller_filter\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'gross'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'movies' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average gross of a Sci-Fi movies: $82,244,105.74\n",
+      "Average gross of a Comedy movies: $47,683,480.20\n",
+      "Average gross of a Thriller movies: $46,890,571.63\n"
      ]
     }
    ],
@@ -550,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -560,18 +577,6 @@
       "Sci-Fi: 26.92 %\n",
       "Comedy: 15.39 %\n",
       "Thriller: 12.72 %\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  after removing the cwd from sys.path.\n",
-      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \"\"\"\n",
-      "C:\\Users\\Devon\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \n"
      ]
     }
    ],
